# recurizer

./: LICENSE  README.md  pyproject.toml
recurizer/src/: __main__.py  summarize.py
src/: __main__.py  delete.py  recurize.py  summarize.py
